--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,11 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "Help") %>
+
+    <h1>Help</h1>
+    <p>
+      Get help on the Ruby on Rails tutorial at <thead>
+        <a href="https://www.railstutorial.org/help">Rails turorial help page</a>.
+      </thead>
+      Get help on this sample app,
+      <a href="https://www.railstutorial.org/book"><em>Ruby on rails tutorial</em>
+      book</a>.
+    </p>
