--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+
+      <strong><h1>Sample App</h1><strong>
+      <p>
+        This is the home page for the
+        <a href="https://www.railstutorial.org/">
+          Ruby on Rail tutorial</a>
+          sample application
+      </p>
