--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
-    The <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    <a href="https://www.railstutorial.org/">Quarter Quell</a>
+    by <a href="https://bitbucket.org/%7Bb071e81b-b50c-4c47-b159-ed9d6e7d0036%7D/">D Bau</a>
   </small>
   <nav>
     <ul>
